Revert "Removed Allergies from views"
This reverts commit 73ae6510e6101ff90098493d8f66b821ab7b865c.

--- a/PocketNurse/Views/Patients/Details.cshtml
+++ b/PocketNurse/Views/Patients/Details.cshtml
@@ -35,6 +35,12 @@
         <dd>
             @Html.DisplayFor(model => model.DOB)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Allergies)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Allergies)
+        </dd>
     </dl>
 </div>
 <div>
