--- a/PocketNurse/Views/Patients/Delete.cshtml
+++ b/PocketNurse/Views/Patients/Delete.cshtml
@@ -36,6 +36,12 @@
         <dd>
             @Html.DisplayFor(model => model.DOB)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Allergies)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Allergies)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
