--- a/PocketNurse/Views/Import/Index.cshtml
+++ b/PocketNurse/Views/Import/Index.cshtml
@@ -1,16 +1,25 @@
 ﻿@{
     ViewData["Title"] = "PocketNurse Import Page";
+    Layout = "~/Views/Import/_Layout.cshtml";
 }
-<form method="post" enctype="multipart/form-data" asp-controller="Import" asp-action="Upload">
-    <div class="form-group">
-        <div class="col-md-10">
-            <p>Upload one or more files using this form:</p>
-            <input type="file" name="file" />
+<form id="upload" method="post" class="well form-horizontal" enctype="multipart/form-data" asp-controller="Import" asp-action="Upload">
+    <fieldset>
+        <!-- Form Name -->
+        <legend>Import file</legend>
+        <div class="form-group">
+            <label class="col-md-4 control-label">Upload file path</label>
+            <div class="col-md-4 inputGroupContainer">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-file"></i></span>
+                    <input placeholder="Path to Excel Spreadsheet" class="form-control" type="file" name="file" required />
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-10">
-            <input type="submit" value="Upload" />
+        <div class="form-group">
+            <label class="col-md-4 control-label"></label>
+            <div class="col-md-10">
+                <button type="submit" class="btn btn-warning">Upload <span class="glyphicon glyphicon-upload"></span></button>
+            </div>
         </div>
-    </div>
+    </fieldset>
 </form>
