--- a/PocketNurse/Views/Import/Upload.cshtml
+++ b/PocketNurse/Views/Import/Upload.cshtml
@@ -66,7 +66,7 @@
                                                 {
                                                     <tr>
                                                         <td>
-                                                            @Html.DisplayFor(modelItem => med.MedicationId)<br />
+                                                            @Html.DisplayFor(modelItem => med.PocketNurseItemId)<br />
                                                         </td>
                                                         <td>
                                                             @Html.DisplayFor(modelItem => med.MedicationName)<br />
