--- a/PocketNurse/Views/Import/Upload.cshtml
+++ b/PocketNurse/Views/Import/Upload.cshtml
@@ -35,61 +35,115 @@
                 </thead>
                 <tbody>
                     @{
-                        foreach (var patient in @Model.Patients)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => patient.Patient.First)<br />
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => patient.Patient.Last)<br />
-                                </td>
-                                <td>
-                                    @patient.Patient.DOB.ToString("MM/dd")<br />
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => patient.Patient.MRN)<br />
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => patient.Patient.PatientId)<br />
-                                </td>
-                                <td>
-                                    @string.Join(",", patient.Allergies.Select(a => a.AllergyName))<br />
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="6">
-                                    <table class="table">
-                                        <tbody>
-                                            @{
-                                                foreach (var med in @patient.MedicationOrders)
-                                                {
-                                                    <tr>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => med.PocketNurseItemId)<br />
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => med.MedicationName)<br />
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => med.Dose)<br />
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => med.Frequency)<br />
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => med.Route)<br />
-                                                        </td>
-                                                    </tr>
-                                                }
-                                            }
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                        }
+                    foreach (var patient in @Model.Patients)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => patient.Patient.First)<br />
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => patient.Patient.Last)<br />
+                            </td>
+                            <td>
+                                @patient.Patient.DOB.ToString("MM/dd")<br />
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => patient.Patient.MRN)<br />
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => patient.Patient.PatientId)<br />
+                            </td>
+                            <td>
+                                @string.Join(",", patient.Allergies.Select(a => a.AllergyName))<br />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="6">
+                                <table class="table">
+                                    <tbody>
+                                        @{
+                                        foreach (var med in @patient.MedicationOrders)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => med.PocketNurseItemId)<br />
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => med.MedicationName)<br />
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => med.Dose)<br />
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => med.Frequency)<br />
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => med.Route)<br />
+                                                </td>
+                                            </tr>
+                                    }
+                                        }
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                }
                     }
                 </tbody>
             </table>
         </div>
-    </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h2 class="panel-title">Not in formulary</h2>
+            </div>
+            <div class="panel-body">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col"><center><b>Generic Name</b></center></th>
+                            <th scope="col"><center><b>Alias</b></center></th>
+                            <th scope="col"><center><b>Strength</b></center></th>
+                            <th scope="col"><center><b>Unit</b></center></th>
+                            <th scope="col"><center><b>Volume</b></center></th>
+                            <th scope="col"><center><b>Unit</b></center></th>
+                            <th scope="col"><center><b>Total Container Volume</b></center></th>
+                            <th scope="col"><center><b>Route</b></center></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                        foreach (var med in @Model.NotInFormulary)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => med.GenericName)<br />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => med.Alias)<br />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => med.Strength)<br />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => med.StrengthUnit)<br />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => med.Volume)<br />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => med.VolumeUnit)<br />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => med.TotalContainerVolume)<br />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => med.Route)<br />
+                                </td>
+                            </tr>
+                        }
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+   </div>
