--- a/PocketNurse/Views/Import/Index.cshtml
+++ b/PocketNurse/Views/Import/Index.cshtml
@@ -8,6 +8,15 @@
         @Html.ValidationSummary()
     </div>
 }
+<!--
+https://stackoverflow.com/questions/304617/html-helper-for-input-type-file
+@using (Html.BeginForm("Upload", "Import", FormMethod.Post, new 
+                                       { enctype = "multipart/form-data" }))
+{
+    @Html.TextBoxFor(m => m.File, new { type = "file" })
+    @Html.ValidationMessageFor(m => m.File)
+}
+-->
     <!-- https://docs.microsoft.com/en-us/aspnet/core/mvc/models/file-uploads?view=aspnetcore-2.1 -->
     <form id="upload" method="post" class="well form-horizontal" enctype="multipart/form-data" asp-controller="Import" asp-action="Upload">
         <fieldset>
@@ -18,7 +27,8 @@
                 <div class="col-md-4 inputGroupContainer">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-file"></i></span>
-                        <input placeholder="Path to Excel Spreadsheet" class="form-control" type="file" name="file" required />
+                        <!-- https://stackoverflow.com/questions/4328947/limit-file-format-when-using-input-type-file -->
+                        <input placeholder="Path to Excel Spreadsheet" class="form-control" type="file" accept=".xls,.xlsx" name="file" required />
                     </div>
                 </div>
             </div>
