Integrated PocketNurse banners

--- a/PocketNurse/Views/Home/Index.cshtml
+++ b/PocketNurse/Views/Home/Index.cshtml
@@ -1,70 +1,64 @@
 ﻿@{
     ViewData["Title"] = "PocketNurse Home Page";
 }
-<div> <img src="~/images/Logo/OmnicellLogo.png"> </div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+<div> <img src="~/images/Logo/OmnicellLogo.png"> <img src="~/images/Logo/PocketNurseLogo.png"> </div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
         <li data-target="#myCarousel" data-slide-to="3"></li>
         <li data-target="#myCarousel" data-slide-to="4"></li>
+        <li data-target="#myCarousel" data-slide-to="5"></li>
+        <li data-target="#myCarousel" data-slide-to="6"></li>
+        <li data-target="#myCarousel" data-slide-to="7"></li>
+        <li data-target="#myCarousel" data-slide-to="8"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/Banner/hbanner_better_ways.jpg" alt="Connect with care" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    We see better ways to connect with care.
-                    <a class="btn btn-default" href="https://www.omnicell.com/Products/Pharmacy_Automation/Robotic_Pharmacy_Systems/XR2_Automated_Central_Pharmacy_System.aspx">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+            <a class="btn btn-default" href="https://www.omnicell.com/Products/Pharmacy_Automation/Robotic_Pharmacy_Systems/XR2_Automated_Central_Pharmacy_System.aspx">
+                <img src="~/images/Banner/hbanner_better_ways.jpg" alt="Connect with care" class="img-responsive" />
+            </a>
         </div>
         <div class="item">
-            <img src="~/images/Banner/hbanner-WeSeePower_of_Health-off.png" alt="Power of health" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    We see the power of health everday.
-                    <a class="btn btn-default" href="https://www.omnicell.com/Products.aspx">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+            <a class="btn btn-default" href="https://www.omnicell.com/Products.aspx">
+                <img src="~/images/Banner/hbanner-WeSeePower_of_Health-off.png" alt="Power of health" class="img-responsive" />
+            </a>
         </div>
         <div class="item">
-            <img src="~/images/Banner/hbanner_beyond.jpg" alt="Beyond" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    We see beyond the status quo.
-                    <a class="btn btn-default" href="https://www.omnicell.com/Products/IV_Solutions/IVX_Workflow.aspx">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+            <a class="btn btn-default" href="https://www.omnicell.com/Products/IV_Solutions/IVX_Workflow.aspx">
+                <img src="~/images/Banner/hbanner_beyond.jpg" alt="Beyond" class="img-responsive" />
+            </a>
         </div>
         <div class="item">
-            <img src="~/images/Banner/hbanner-WeSeeBetter_Way-off.png" alt="Better way" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    We see a better way.
-                    <a class="btn btn-default" href="https://www.omnicell.com/Products/Medication_Dispensing/Automated_Medication_Dispensing/Omnicell_XT_Automated_Dispensing_Cabinets.aspx">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+            <a class="btn btn-default" href="https://www.omnicell.com/Products/Medication_Dispensing/Automated_Medication_Dispensing/Omnicell_XT_Automated_Dispensing_Cabinets.aspx">
+                <img src="~/images/Banner/hbanner-WeSeeBetter_Way-off.png" alt="Better way" class="img-responsive" />
+            </a>
         </div>
         <div class="item">
-            <img src="~/images/Banner/hbanner-WeSeePerformance_Optimized-off.png" alt="Optized" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    We see your performance optimized.
-                    <a class="btn btn-default" href="https://www.omnicell.com/Products/Performance_Center.aspx">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+            <a class="btn btn-default" href="https://www.omnicell.com/Products/Performance_Center.aspx">
+                <img src="~/images/Banner/hbanner-WeSeePerformance_Optimized-off.png" alt="Optized" class="img-responsive" />
+            </a>
+        </div>
+        <div class="item">
+            <a class="btn btn-default" href="https://www.pocketnurse.com/">
+                <img src="~/images/Banner/PocketNurseHelp.jpg" alt="Optized" class="img-responsive" />
+            </a>
+        </div>
+        <div class="item">
+            <a class="btn btn-default" href="https://www.pocketnurse.com/index.php/default/privacy-curtain-sizing-form/">
+                <img src="~/images/Banner/PockerNurseCurtains.jpg" alt="Optized" class="img-responsive" />
+            </a>
+        </div>
+        <div class="item">
+            <a class="btn btn-default" href="https://www.pocketnurse.com/index.php/default/products/demo-dose.html">
+                <img src="~/images/Banner/PocketNurseIV.jpg" alt="Optized" class="img-responsive" />
+            </a>
+        </div>
+        <div class="item">
+            <a class="btn btn-default" href="https://www.pocketnurse.com/">
+                <img src="~/images/Banner/PocketNurseNational.jpg" alt="Optized" class="img-responsive" />
+            </a>
         </div>
     </div>
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
