--- a/PocketNurse/Views/Import/Index.cshtml
+++ b/PocketNurse/Views/Import/Index.cshtml
@@ -10,24 +10,14 @@
 }
     <!-- https://docs.microsoft.com/en-us/aspnet/core/mvc/models/file-uploads?view=aspnetcore-2.1 -->
     <form id="upload" method="post" class="well form-horizontal" enctype="multipart/form-data" asp-controller="Import" asp-action="Upload">
-        <fieldset>
-            <!-- Form Name -->
-            <legend>Import file</legend>
-            <div class="form-group">
-                <label class="col-md-4 control-label">Upload file path</label>
-                <div class="col-md-6 inputGroupContainer">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-file"></i></span>
-                        <!-- https://stackoverflow.com/questions/4328947/limit-file-format-when-using-input-type-file -->
-                        <input placeholder="Path to Excel Spreadsheet" class="form-control" type="file" accept=".xls,.xlsx" name="file" required />
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-4 control-label"></label>
-                <div class="col-md-10">
-                    <button type="submit" class="btn btn-warning">Upload <span class="glyphicon glyphicon-upload"></span></button>
-                </div>
-            </div>
-        </fieldset>
+        <div>
+            <label for="sheet_upload">Choose sheet to upload (XLSX)</label>
+            <input type="file" id="sheet_upload" name="sheet_upload" accept=".xlsx" required>
+        </div>
+        <div class="preview">
+            <p>No files currently selected for upload</p>
+        </div>
+        <div>
+            <button>Upload</button>
+        </div>
     </form>
