Require file input

--- a/PocketNurse/Views/Import/Index.cshtml
+++ b/PocketNurse/Views/Import/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="form-group">
             <div>
                 <label for="sheet_upload">Choose images to upload (XLSX)</label>
-                <input type="file" id="sheet_upload" name="sheet_upload" accept=".xlsx" multiple>
+                <input type="file" id="sheet_upload" name="sheet_upload" accept=".xlsx" required>
             </div>
             <div class="preview">
                 <p>No files currently selected for upload</p>
