Changed name of input element to allow POST to work

--- a/PocketNurse/wwwroot/css/upload.css
+++ b/PocketNurse/wwwroot/css/upload.css
@@ -52,6 +52,6 @@ form#upload {
         color: white;
     }
 
-input#sheet_upload[type="file"] {
+input#uploadFile[type="file"] {
     opacity: 0;
 }
