--- a/PocketNurse/Views/Import/Index.cshtml
+++ b/PocketNurse/Views/Import/Index.cshtml
@@ -13,8 +13,8 @@
     <fieldset>
         <div class="form-group">
             <div>
-                <label for="sheet_upload">Choose images to upload (XLSX)</label>
-                <input type="file" id="sheet_upload" name="sheet_upload" accept=".xlsx" required>
+                <label for="uploadFile">Choose images to upload (XLSX)</label>
+                <input type="file" id="uploadFile" name="file" accept=".xlsx" required>
             </div>
             <div class="preview">
                 <p>No files currently selected for upload</p>
